--- a/src/index.css
+++ b/src/index.css
@@ -1,46 +1,348 @@
 @font-face {
-  font-family: 'PTMono';
-  src: url('assets/fonts/PTMono-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+	font-family: 'PTMono';
+	src: url('assets/fonts/PTMono-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+*,
+html {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 body {
-  margin: 0;
-  font-family: 'PTMono', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: #141d2b;
+	margin: 0;
+	font-family: 'PTMono', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background: #141d2b;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
 }
-#fancy-background { color: var(--background, #141d2b); }
-
+#fancy-background {
+	color: var(--background, #141d2b);
+}
 
 ::selection {
-  background: var(--primary, #9fef00);
-  color: var(--background, #141d2b);
+	background: var(--primary, #9fef00);
+	color: var(--background, #141d2b);
 }
 
-
 svg.rsm-svg {
-  background: #2a3240;
-  border-radius: 6px;
+	background: #2a3240;
+	border-radius: 6px;
 }
 
 :root {
-  --toastify-color-dark: #111927 !important;
-  --toastify-color-info: #04e4f4 !important;
-  --toastify-color-success: #20e253 !important;
-  --toastify-color-warning: #f6f000 !important;
-  --toastify-color-error: #f80363 !important;
+	--toastify-color-dark: #111927 !important;
+	--toastify-color-info: #04e4f4 !important;
+	--toastify-color-success: #20e253 !important;
+	--toastify-color-warning: #f6f000 !important;
+	--toastify-color-error: #f80363 !important;
+}
+
+.main-container {
+	width: 100%;
+	padding: 50px;
+	height: calc(100vh - 80px);
+	overflow: hidden;
+}
+.main-container .main-info .title-h1 {
+	width: 50%;
+	font-size: 36px;
+}
+.main-container .main-info {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	margin-top: 50px;
+}
+
+.main-container .banner-img {
+	position: absolute;
+	bottom: 50px;
+	right: 50px;
+	overflow: hidden;
+}
+.main-container .banner-img img {
+	width: 700px;
+	mix-blend-mode: lighten;
+}
+
+.Footer {
+	padding: 50px;
+	box-sizing: border-box;
+	width: 100%;
+}
+.footer-container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+.foo-grids {
+	display: grid;
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+	gap: 3rem;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 2fr));
+}
+.foo-info {
+	padding-top: 3rem;
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+}
+.foo-info span {
+	width: 100%;
+}
+.foo-info span hr {
+	flex: 1 1 auto;
+}
+
+.foo-nav {
+	grid-column: span 2 / span 2;
+	width: 80%;
+}
+.foo-nav .img-box {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	text-decoration: none;
+	color: #fff;
+}
+.foo-nav .img-box img {
+	margin-left: 30px;
+}
+.foo-gr-item {
+	display: flex;
+	flex-direction: column;
+}
+.foo-info-title {
+	font-size: 1.275rem;
+	line-height: 2rem;
+}
+
+.foo-gr-item ul {
+	list-style: none;
+	padding: 0;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	margin-top: 15px;
+}
+.foo-gr-item ul li {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+.foo-gr-item ul li a {
+	text-decoration: none;
+	color: #fff;
+	transition: 0.55s;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+.foo-gr-item ul li:hover a {
+	color: #ffffffac;
+}
+.phone-items {
+	display: flex;
+	gap: 10px;
+	align-items: center;
+}
+.phone-items span {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+}
+hr {
+	opacity: 0.5;
+}
+
+.about-container {
+	padding-inline: 50px;
+	margin-top: 30px;
+}
+
+.info-container {
+	padding: 20px;
+	box-sizing: border-box;
+}
+.in-cards {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	gap: 30px;
+	flex-wrap: wrap;
+	margin: 20px 0;
+	padding: 0 20px;
+	box-sizing: border-box;
+}
+.in-card-item {
+	padding: 20px;
+	border-radius: 20px;
+	background-color: #1a2332;
+	width: clamp(400px, 30px, 450px);
+	height: 200px;
+	display: flex;
+	align-items: center;
+	position: relative;
+	cursor: pointer;
+}
+.in-card-item p {
+	font-size: 24px;
+}
+.in-card-item .ic-icon {
+	position: absolute;
+	bottom: 50%;
+	right: 30px;
+	translate: 0 50%;
+	top: -60px;
+	right: 10px;
+}
+.in-card-item .ic-icon img {
+	width: 60px;
+}
+.in-card-item .ic-arrow {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	translate: 20% 30%;
+	background-color: #141d2b;
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: 0.75s;
+}
+.in-card-item:hover .ic-arrow {
+	padding-left: 20px;
+}
+.lg-menu {
+	display: block;
+}
+.tab-menu {
+	padding: 5px 10px;
+	background-color: transparent;
+	color: #fff;
+	font-size: 20px;
+	border: none;
+	outline: none;
+	display: none;
+}
+.drop-box {
+	position: relative;
+}
+
+.drop-menu ul {
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+	text-align: right;
+	width: 100%;
+	width: 300px;
+	position: absolute;
+}
+.MuiPaper-root {
+	background-color: #141d2b !important;
+}
+@media screen and (max-width: 768px) {
+	.lg-menu {
+		display: none;
+	}
+	.tab-menu {
+		display: block;
+	}
+}
+@media screen and (max-width: 1240px) {
+	.main-container .main-info .title-h1 {
+		font-size: 24px;
+	}
+	.main-container .banner-img {
+		bottom: 10px;
+		right: 0;
+	}
+	.main-container .banner-img img {
+		width: 600px;
+	}
+}
+@media screen and (max-width: 768px) {
+	.main-container .main-info .title-h1 {
+		width: 100%;
+	}
+	.main-btns {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.main-container .banner-img img {
+		width: 500px;
+		mix-blend-mode: soft-light;
+	}
+	.main-container .banner-img {
+		bottom: 10px;
+		right: 50%;
+		translate: 50% 0;
+	}
+	.foo-nav {
+    grid-column: span 1 / span 1;
+    width: 100%;
+}
+}
+@media screen and (max-width: 564px) {
+	.main-container .banner-img {
+		width: 80%;
+	}
+	.main-container .banner-img img {
+		width: 100%;
+	}
+	.main-container .main-info .title-h1 {
+		font-size: 20px;
+	}
+	.main-container .banner-img {
+		bottom: 100px;
+	}
+	.in-card-item .ic-icon {
+		top: -60px;
+		right: 10px;
+	}
+	.in-card-item .ic-icon img {
+		width: 50px;
+	}
+	.sec-container,
+	.about-container {
+		width: 100%;
+	}
+	.sec-container {
+		padding-inline: 20px !important;
+	}
+	.check-wrapps {
+		width: 100% !important;
+		margin-top: 15px;
+		padding: 20px !important;
+	}
+	.about-container {
+		padding: 0;
+	}
+	.about-container .title-h4 {
+		margin-left: 30px;
+	}
+	.Footer {
+		padding: 30px;
+	}
 }
