--- a/src/index.css
+++ b/src/index.css
@@ -373,11 +373,11 @@ hr {
 		margin-top: 20px !important;
 	}
 	.masonry-grid-col section {
-		margin: 0 !important;
+		margin: 10px !important;
 	}
 }
 @media screen and (max-width: 564px) {
 	.res-nav-info {
-		border-top: 10px solid #787878;
+		border-top: 1px solid #787878;
 	}
 }
